# PlasmaReport

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  excel_handlers.py  exceptions.py  line_counter.py  logger_config.py  main.py  middlewares.py  plasma_exceptions.py  plasma_report.db  pyproject.toml  requirements.txt  ruff.toml  start.bat  tst_in_plasma_report.py
admin_panel/: admin.py  admin_auth.py
auth/: dao.py  enums.py  models.py  password_utils.py  router.py  router_docs.py  schemas.py  transport.py  users.py  utils.py
db/: base_dao.py  database.py
dependencies/: auth_dep.py  dao_dep.py
docs/: Инструкция Plasma-Report.docx
frontend/: package-lock.json  package.json
frontend/first_tests/: package.json
frontend/src/: App.js
logist/: dao.py  router.py  schemas.py
logs/: log.json
master/: dao.py  enums.py  models.py  router.py  schemas.py
migration/: env.py
migration/versions/: 05182d2b574a_.py  05b63c4d9eb0_.py  077854ebffc8_.py  0dfe5cb0412f_.py  11f26e3faeed_user_fio_doer_one_to_one.py  146619e72f5b_.py  18e34a163b67_.py  1a7bd479f72a_.py  22617ee88cd1_.py  25e3d1174908_.py  2938518e2109_.py  3448de858f05_remove_nullable_from_first_and_last_.py  40e4ac79e580_.py  4afb8eb438a1_.py  4babd986ca9a_.py  54217ea6f71a_.py  6c46d88bec37_remove_uniqe_from_part.py  74564c00b127_.py  7beffc0e8afa_.py  80f437d37481_.py  830a122b0e20_.py  9a99fe8bb82a_.py  9e003f505f27_.py  (+14 more)
operator_worker/: router.py  schemas.py
reports/: dao.py  router.py
settings/: constants.py  register_routers.py  translate_dict.py
sigma_handlers/: SQLqueries.py  database.py  sigma_db.py  sigma_utils.py  sql_queries.py
techman/: constants.py  dao.py  enums.py  models.py  router.py  schemas.py  utils.py
tests/: conftest.py  test_copy_pics_and_get_links.py
utils/: common_utils.py  excel_utils.py  sort_dict_by_list.py
(+8 files in other folders)
