[project]
name = "plasmareport"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.21.0",
    "alembic>=1.14.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "cairosvg>=2.7.1",
    "certifi==2025.1.31",
    "click==8.1.8",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "ecdsa==0.19.0",
    "email-validator==2.2.0",
    "ezdxf>=1.3.5",
    "fastapi==0.115.8",
    "fastapi-cli==0.0.7",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "loguru==0.7.3",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib>=3.10.0",
    "mdurl==0.1.2",
    "odfpy>=1.4.1",
    "orjson==3.10.15",
    "packaging==24.2",
    "passlib==1.7.4",
    "pillow>=11.1.0",
    "pluggy==1.5.0",
    "pyasn1==0.4.8",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-extra-types==2.10.2",
    "pydantic-settings==2.8.0",
    "pygments==2.19.1",
    "pyodbc==5.2.0",
    "python-dotenv==1.0.1",
    "python-jose==3.4.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "rich-toolkit==0.13.2",
    "rsa==4.9",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqladmin==0.20.1",
    "sqlalchemy==2.0.38",
    "starlette==0.45.3",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "ujson==5.10.0",
    "uvicorn==0.34.0",
    "watchfiles==1.0.4",
    "websockets==15.0",
    "win32-setctime==1.2.0",
    "wtforms==3.1.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]
